[tool.poetry]
name = "url_shortener"
version = "0.1.0"
description = ""
authors = ["Dzenis Kapeikin <kopeykindzzesen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
SQLAlchemy = "^1.4.37"
sqlalchemy-stubs = "^0.4"
python-dotenv = "^0.20.0"
validators = "^0.19.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
mypy = "^0.960"
flake8 = "^4.0.1"
black = "^22.3.0"
ptpython = "^3.0.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
